--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^1.13.2",
     "pinia": "^3.0.4",
+    "vee-validate": "^4.15.1",
     "vue": "^3.5.26",
     "vue-router": "^4.6.4",
     "vue-toastification": "^2.0.0-rc.5",
